--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Sink Yourself in to Vibes, 
-      Social and Entertainment Super Platform , 
-      Read Books, Listen Audio Books, Free Music, 
-      Free Podcasts, Free Radio, Live Crypto Prices and NFTs, 
-      Post Anonymously , Participate in Club Contests, 
-      Practice Breathe, Check Fitness Exercises, Play Games"
+      content="Socio-club - Social and Entertainment Super Platform or Super App ,our clubs - Read Books, Listen Audio Books, Free Music, Free Podcasts, Free Radio, Live Crypto Prices and NFTs, Post Anonymously , Participate in Club Contests on memes and reels and win rewards, Practice Breathe, Check Fitness Exercises, Watch gaming videos, Play Games for free, Participate in Quizes, Shop online everything"
     />
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
