--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,21 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/logo.e34344d57bfe6b8b4fb9.png" type="image/x-png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Socio-club - Social and Entertainment Super Platform or Super App ,our clubs - Read Books, Listen Audio Books, Free Music, Free Podcasts, Free Radio, Live Crypto Prices and NFTs, Post Anonymously , Participate in Club Contests on memes and reels and win rewards, Practice Breathe, Check Fitness Exercises, Watch gaming videos, Play Games for free, Participate in Quizes, Shop online everything"
-    />
+    <meta name="title" 
+    content="Socio Club , Social And 
+    Entertainment Super App or Super Platform ">
+    <meta name="description" 
+    content="Our  Clubs are Games,Music,Podcats,Radio,
+    NFTS,Crypto,Fitness,Shopping,Books,AudioBooks,Breathing ,
+    Anonymous , Contests, Memes ,Videos,  all  are Free">
+    <meta name="keywords" 
+    content="Socio Club, Free Games ,Music, Podcasts , Radio ,NFTS ,
+    live Crypto prices ,Fitness, Shopping, Books,  Audio Books, Anonymous 
+    posting , Free Contests ,Memes ,Videos, Super App ,Free, Breathing ,Gaming Videos, Quizes">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
+
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Alegreya+SC&family=Montserrat:wght@100&family=Oswald:wght@200&display=swap" rel="stylesheet">
