--- a/public/index.html
+++ b/public/index.html
@@ -13,10 +13,10 @@
     Entertainment Super App or Super Platform ">
     <meta name="description" 
     content="Our  Clubs are Games,Music,Podcats,Radio,
-    NFTS,Crypto,Fitness,Shopping,Books,AudioBooks,Breathing ,
+    NFTS,Crypto,Fitness,Shopping,Books,AudioBooks,News ,
     Anonymous , Contests, Memes ,Videos,  all  are Free">
     <meta name="keywords" 
-    content="Socio Club, Free Games ,Music, Podcasts , Radio ,NFTS ,
+    content="Socio Club, Free Games ,Music, Podcasts , Radio ,NFTS , News
     live Crypto prices ,Fitness, Shopping, Books,  Audio Books, Anonymous 
     posting , Free Contests ,Memes ,Videos, Super App ,Free, Breathing ,Gaming Videos, Quizes">
     <meta name="robots" content="index, follow">
