--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       href="%PUBLIC_URL%/logo.e34344d57bfe6b8b4fb9.png"
       type="image/x-png"
     />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <meta name="theme-color" content="#000000" />
     <link rel="canonical" href="https://www.socio-club.com" />
